makes title text/link more responsive.  fixes white space problem with mobile.

--- a/css/creative.css
+++ b/css/creative.css
@@ -631,3 +631,7 @@ footer{
     position: absolute;
     left:30%;
 }
+
+#titleText{
+   font-size: 14px;
+}
